syntax = "proto3";
option go_package = ".;authen_and_post";
package authen_and_post;

service AuthenticateAndPost {
  rpc CheckUserAuthentication(UserInfo) returns (UserResult) {}
  rpc CreateUser(UserRegisterInfo) returns (UserResult) {}
  // rpc EditUser(UserDetailInfo) returns (UserResult) {}
  // rpc GetUserFollower(UserInfo) returns (UserFollower) {}
  // rpc GetPostDetail(GetPostRequest) returns (Post) {}
}

message UserInfo {
  int64 user_id = 1;
  string email = 2;
  string user_password = 3;
}

message UserRegisterInfo {
  int64 user_id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string password = 5;
  UserStatus status = 6;
}

message UserDetailInfo {
  int64 user_id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  UserStatus status = 5;
}

enum UserStatus {
  NOT_FOUND = 0;
  OK = 1;
}

message UserResult {
  UserStatus status = 1;
  UserDetailInfo info = 2;
}

message UserFollower {
  repeated UserInfo followers = 1;
}

message GetPostRequest {
  int64 post_id = 1;
}

message Post {
  int64 post_id = 1;
  int64 user_id = 2;
  string content_text = 3;
  string content_img_path = 4;
  bool visible = 5;
  int64 created_at = 6;
}